# music-app

./: .cache  .env.txt  .gitignore  README.md  create_tables.py  create_tables_py  main.py  requirements.txt  setup.cfg  test_db.py  test_query.sql
.github/workflows/: tests.yml
music_app/: db.py  main.py  models.py  schemas.py  seed.py
music_app/routers/: likes.py  recommendations.py  spotify.py  tracks.py  uploads.py  users.py
music_app/utils/: audio.py  similarity.py  spotify.py
tests/: conftest.py  test_likes.py  test_recommendations.py  test_spotify.py  test_tracks.py  test_uploads.py  test_users.py  testss_api.py
uploads/: Unconfirmed 309189.crdownload  cd41979f-f491-4902-a537-7be23fe95818.tmp
