[metadata]
name = music_app
version = 0.1.0
description = Music app backend
author = Samuel Onuoha

[options]
packages = find:
install_requires =
    fastapi
    uvicorn
    sqlalchemy
    psycopg2-binary
    python-dotenv
    spotipy
    librosa
    numpy
    pydantic

[options.packages.find]
exclude =
    tests
